manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: neath-tan7026-pipejet-ui-branch-master-latest-service
spec:
  type: NodePort
  selector:
    app: neath-tan7026-pipejet-ui-branch-master-latest
  ports:
    - protocol: TCP
      port: 8255
      targetPort: 3000
