manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: neath-tan7026-pipejet-ui-branch-master-latest-https-ingress
  namespace: neath-tan7026-pipejet-ui-branch-master-latest
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "180"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "180"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "180"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - pipejet.kshrd.app
      secretName: neath-tan7026-pipejet-ui-branch-master-latest-secret-tls
  rules:
    - host: pipejet.kshrd.app
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: neath-tan7026-pipejet-ui-branch-master-latest-service
                port:
                  number: 8255
